--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@faker-js/faker": "7.6.0",
     "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.45.6",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "json-server": "^1.0.0-beta.3",
     "next": "^15.0.1",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "4.6.0"
