--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@faker-js/faker": "7.6.0",
     "@popperjs/core": "^2.11.8",
+    "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.6",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
