--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@faker-js/faker": "7.6.0",
     "@popperjs/core": "^2.11.8",
     "@supabase/ssr": "^0.5.1",
@@ -22,7 +23,9 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "4.6.0"
+    "react-icons": "4.6.0",
+    "save-dev": "^0.0.1-security",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
